--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -17,12 +17,13 @@
     - 3.4 JVM处理异常入口
     - 3.5 理解异常栈轨迹链
     - 3.6 JVM如何实现异常
-- 04.崩溃监听思路
+- 04.崩溃捕获思路
     - 4.1 实现崩溃监听
     - 4.2 处理捕获异常
     - 4.3 实现相同异常次数统计
     - 4.4 崩溃日志收集
     - 4.5 捕获指定线程异常
+    - 4.6 日志可视化查看
     - 4.7 日志发送邮箱
     - 4.8 崩溃重启实践
 - 05.方案基础设计
@@ -357,7 +358,8 @@
       CLEAR_PENDING_EXCEPTION;
     }
     ```
-- 在线程调用 exit 退出时，如果有未捕获的异常，则会调用 Thread.dispatchUncaughtException 方法。这个则是java层处理异常的入口！
+- 在线程调用 exit 退出时
+    - 如果有未捕获的异常，则会调用 Thread.dispatchUncaughtException 方法。这个则是java层处理异常的入口！
 
 
 
@@ -368,7 +370,7 @@
     ``` java
     Process: com.yc.ycandroidtool, PID: 16060
     java.lang.NullPointerException: Attempt to invoke virtual method 'void android.app.Activity.finish()' on a null object reference
-        at com.com.yc.appmonitor.CrashTestActivity.onClick(CrashTestActivity.java:48)
+        at com.com.yc.appmonitor.crash.CrashTestActivity.onClick(CrashTestActivity.java:48)
         at android.view.View.performClick(View.java:7187)
         at android.view.View.performClickInternal(View.java:7164)
         at android.view.View.access$3500(View.java:813)
@@ -496,7 +498,6 @@
     ```
     - 机型、系统、厂商、CPU、ABI、Linux 版本等。–> 寻找共性
     - 设备状态：是否 root、是否是模拟器。一些问题是由 Xposed 或多开软件造成，对这部分问题我们要区别对待。
-    - 
 - 内存信息
     - OOM、ANR、虚拟内存耗尽等，很多崩溃都跟内存有直接关系。
     - 系统剩余内存。关于系统内存状态，可以直接读取文件 /proc/meminfo。当系统可用内存很小（低于 MemTotal 的 10%）时，OOM、大量 GC、系统频繁自杀拉起等问题都非常容易出现。
@@ -517,6 +518,11 @@
         1869 FinalizerDaemon
         ```
 
+
+#### 4.6 日志可视化查看
+
+
+
 #### 4.7 日志发送邮箱
 
 
@@ -535,6 +541,42 @@
     CrashToolUtils.reStartApp3(AppManager.getAppManager().currentActivity());
     ```
 
+
+
+### 05.方案基础设计
+#### 5.1 整体架构图
+
+
+
+#### 5.2 UML设计图
+
+
+
+#### 5.3 关键流程图
+
+
+#### 5.4 接口设计图
+
+
+#### 5.5 模块间依赖关系
+
+
+
+### 06.其他设计说明
+#### 6.1 性能设计
+
+
+
+#### 6.2 稳定性设计
+
+
+#### 6.3 灰度设计
+
+
+#### 6.4 降级设计
+
+
+#### 6.5 异常设计
 
 
 
