--- a/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
@@ -4,6 +4,7 @@
     - 1.2 思考一些问题
     - 1.3 Crash指标
     - 1.4 Crash治理原则
+    - 1.5 崩溃分析三部曲
 - 02.Crash常见治理
     - 2.1 常见Crash分类
     - 2.2 空指针崩溃问题
@@ -57,7 +58,7 @@
 - 针对so库崩溃
     - 待完善
 - 针对公司技术库崩溃
-    - 比如，外卖app某个用户地图出现了崩溃，当捕获到异常信息之后，这个时候可以采用降级的策略止损，然后去分析原因找出真正的问题。
+    - 比如，外卖app某个用户地图出现了崩溃，当捕获到异常信息之后，这个时候可以采用降级的策略止损容错，然后去分析原因找出真正的问题。
 
 
 #### 1.3 Crash指标
@@ -81,6 +82,19 @@
     - 当`Crash`发生的时候，损失已经造成了，我们再怎么治理也只是减少损失。尽可能的提前预防Crash的发生，可以将Crash消灭在萌芽阶段。
 - 事后复现和总结
     - 尽量去找到复现问题的链路，方便排查问题，修改后是否再次出现。有些bug如果找不到，那么思考能否上传info日志，通过技术埋点去排查崩溃链路问题。
+
+
+#### 1.5 崩溃分析三部曲
+- 第一步：确定重点
+    - 确认和分析重点，关键在于在日志中找到重要的信息，对问题有一个大致判断。一般来说，我建议在确定重点这一步可以关注以下几点。
+    - 1.确认严重程度。解决崩溃也要看性价比，我们优先解决 Top 崩溃或者对业务有重大影响，例如启动、支付过程的崩溃。
+    - 2.崩溃基本信息。确定崩溃的类型以及异常描述，对崩溃有大致的判断。
+    - 3.各个资源情况。结合崩溃的基本信息，接着看看是不是跟 “内存信息” 有关，是不是跟“资源信息”有关。比如是物理内存不足、虚拟内存不足，还是文件句柄 fd 泄漏了。
+- 第二步：查找共性
+    - 如果使用了上面的方法还是不能有效定位问题，我们可以尝试查找这类崩溃有没有什么共性。找到了共性，也就可以进一步找到差异，离解决问题也就更进一步 机型、系统、ROM、厂商、ABI，这些采集到的系统信息都可以作为维度聚合,找到了共性，可以对你下一步复现问题有更明确的指引。
+- 第三步：尝试复现
+    - “只要能本地复现，我就能解”，相信这是很多开发跟测试说过的话。有这样的底气主要是因为在稳定的复现路径上面，可以采用增加日志或使用 Debugger、GDB 等各种各样的手段或工具做进一步分析。
+
 
 
 
