--- a/Read/ReadMeWiki/00.方案实践/07.卡顿治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.卡顿治理优化实践.md
@@ -3,7 +3,7 @@
     - 1.1 项目背景
     - 1.2 遇到问题
     - 1.3 基础概念
-    - 1.4 设计目标
+    - 1.4 卡顿指标
 - 02.治理卡顿的流程
     - 2.1 排查卡顿流程
     - 2.2 排查卡顿工具
@@ -16,6 +16,11 @@
 - 05.过渡绘制卡顿
     - 5.1 
 
+
+
+
+### 01.卡顿基础介绍
+#### 1.4 卡顿指标
 
 
 
