--- a/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/02.崩溃治理优化总结.md
@@ -68,8 +68,7 @@
     - PV Crash率：针对用户使用次数的统计，评估相关Crash影响的严重程度。
     - 大家可以根据自己的需要选择合适的指标，需要注意的是，需要确保一直使用同一种衡量方式。
 - Crash率评价。那么，我们App的Crash率降低多少才能算是一个正常水平或优秀的水平呢？ 
-    - Java与Native的总崩溃率必须在千分之二以下。Crash率万分位为优秀
-- 注意，以上说的都是UV崩溃率。
+    - Java与Native的总崩溃率必须在千分之二以下。Crash率万分位为优秀。注意，以上说的都是UV崩溃率。
 
 
 
@@ -114,13 +113,16 @@
 - 针对第一种情况导致的原因有很多，可能是开发人员的失误、API返回数据解析异常、进程被杀死后静态变量没初始化导致，我们可以做的有：
     - 对可能为空的对象做判空处理；养成使用@NonNull和@Nullable注解的习惯；如果是kotlin避免使用!!；尽量不使用静态变量存储跨页面数据。
 - 针对第二种情况大部分是由于Activity/Fragment销毁或被移除后，在Message、Runnable、网络等回调中执行了一些代码导致的，可以做的有：
-    - `Message`、`Runnable`回调时，判断Activity/Fragment是否销毁或被移除；加try-catch保护；Activity/Fragment销毁时移除所有已发送的Runnable。
-    - 封装`LifecycleMessage`/`Runnable`基础组件，并自定义Lint检查，提示使用封装好的基础组件。在BaseActivity、BaseFragment的onDestroy()里把当前Activity所发的所有请求取消掉。
+    - 1.`Message`、`Runnable`回调时，判断Activity/Fragment是否销毁或被移除；加try-catch保护；Activity/Fragment销毁时移除所有已发送的Runnable。
+    - 2.封装`LifecycleMessage`/`Runnable`基础组件，并自定义Lint检查，提示使用封装好的基础组件。在BaseActivity、BaseFragment的onDestroy()里把当前Activity所发的所有请求取消掉。
+    - 3.针对Fragment中onActivityResult回调，处理data偶发空指针(原因是activity异常生命周期导致data可能为空)，增加非空判断。
+
 
 
 #### 2.3 索引越界异常
 - 这类`Crash`常见于对`RecyclerView`的操作和多线程下对容器的操作。
-    - 针对`RecyclerView`中造成的`IndexOutOfBoundsException`，经常是因为外部也持有了Adapter里数据的引用(如在Adapter的构造函数里直接赋值)，这时如果外部引用对数据更改了，但没有及时调用`notifyDataSetChanged()`，则有可能造成Crash，对此我们封装了一个BaseAdapter，数据统一由Adapter自己维护通知，这两类Crash目前得到了统一的解决。
+    - 针对`RecyclerView`中造成的`IndexOutOfBoundsException`，经常是因为外部也持有了Adapter里数据的引用(如在Adapter的构造函数里直接赋值)，这时如果外部引用对数据更改了，但没有及时调用`notifyDataSetChanged()`，则有可能造成Crash。
+    - 对此我们封装了一个BaseAdapter，数据统一由Adapter自己维护通知，这两类Crash目前得到了统一的解决。
 - 注意有些容器是线程不安全的
     - 所以如果在多线程下对其操作就容易引发`IndexOutOfBoundsException`。常用的如JDK里的ArrayList和Android里的SparseArray、ArrayMap，同时也要注意有一些类的内部实现也是用的线程不安全的容器，如Bundle里用的就是ArrayMap。
 
@@ -131,7 +133,7 @@
     - 对于一些特殊情况，比如说，开发过程当中或代码中出现了一些catch代码块，捕获住了异常，让程序不崩溃，这其实是不合理的，程序虽然没有崩溃，当时程序的功能已经变得不可用。
     - 所以，这些被`catch`的异常我们也需要上报上来，这样我们才能知道用户到底出现了什么问题而导致的异常。
 - 如何捕获下层基础库异常，上报到APM？
-    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然没办法直接做到……可以间接通过接口回调来上报异常。
+    - 举个例子，比如你是在app壳module集成APM，但是现在你想统计一些基础lib库module(被app依赖)的异常。显然没办法直接做到……可以间接通过接口回调来上报异常。具体参考：[EventUploadLib]()
 - 举一个实际的例子捕获catch中异常
     - 你抛出的异常越具体、越明确越好。使用者可以根据具体的异常进行不同的补救措施。因此，你需要确保提供尽可能多的信息，这会使得你的 API 更易于理解。
     ``` java
@@ -168,6 +170,7 @@
     - 在发布阶段，我们应该进行多轮灰度，灰度量级应逐渐由小变大，用最小的代价提前暴露问题。灰度发布同样应该分场景、多纬度全面覆盖，可以针对特别的版本，机型等进行专门的灰度，看下那些更有可能出现问题的用户是否出现问题
 - 运维阶段
     - 在上线之后，稳定性问题同样需要关注，因此特别依赖于APM的灵敏监控，发现问题及时报警。如果出现了异常情况，也需要根据情况进行回滚或者降级策略
+
 
 
 ### 03.系统级别Crash
@@ -265,8 +268,10 @@
         }
     }
     ```
-- `App`用上述方法解决了对应的Crash，但是有时候因为平台的限制无法通过这种方式，于是我们尝试反编译ROM。 Android ROM编译时会将framework、app、bin等目录打入system.img中，system.img是Android系统中用来存放系统文件的镜像 (image)，文件格式一般为yaffs2或ext。但Android 5.0开始支持dm-verity后，system.img不再提供，而是提供了三个文件system.new.dat，system.patch.dat，system.transfer.list，因此我们首先需要通过上述的三个文件得到system.img。但我们将vivo ROM解压后发现厂商将system.new.dat进行了分片。
-- 经过对system.transfer.list中的信息和system.new.dat 1 2 3 … 文件大小对比研究，发现一些共同点，system.transfer.list中的每一个block数*4KB 与对应的分片文件的大小大致相同,故大胆猜测，vivo ROM对system.patch.dat分片也只是单纯的按block先后顺序进行了分片处理。所以我们只需要在转化img前将这些分片文件合成一个system.patch.dat文件就可以了。最后根据system.img的文件系统格式进行解包，拿到framework目录，其中有framework.jar和boot.oat等文件，因为Android4.4之后引入了ART虚拟机，会预先把system/framework中的一些jar包转换为oat格式，所以我们还需要将对应的oat文件通过ota2dex将其解包获得dex文件，之后通过dex2jar和jd-gui查看源码。
+- `App`用上述方法解决了对应的Crash，但是有时候因为平台的限制无法通过这种方式，于是我们尝试反编译ROM。
+    - Android ROM编译时会将framework、app、bin等目录打入system.img中，system.img是Android系统中用来存放系统文件的镜像 (image)，文件格式一般为yaffs2或ext。
+    - 但Android 5.0开始支持dm-verity后，system.img不再提供，而是提供了三个文件system.new.dat，system.patch.dat，system.transfer.list，因此我们首先需要通过上述的三个文件得到system.img。
+    - 但我们将vivo ROM解压后发现厂商将system.new.dat进行了分片。经过对system.transfer.list中的信息和system.new.dat 1 2 3 … 文件大小对比研究，发现一些共同点，system.transfer.list中的每一个block数*4KB 与对应的分片文件的大小大致相同,故大胆猜测，vivo ROM对system.patch.dat分片也只是单纯的按block先后顺序进行了分片处理。所以我们只需要在转化img前将这些分片文件合成一个system.patch.dat文件就可以了。最后根据system.img的文件系统格式进行解包，拿到framework目录，其中有framework.jar和boot.oat等文件，因为Android4.4之后引入了ART虚拟机，会预先把system/framework中的一些jar包转换为oat格式，所以我们还需要将对应的oat文件通过ota2dex将其解包获得dex文件，之后通过dex2jar和jd-gui查看源码。
 
 
 
@@ -274,7 +279,8 @@
 - `OOM`是`OutOfMemoryError`的简称，在常见的`Crash`疑难排行榜上，`OOM`绝对可以名列前茅并且经久不衰。
     - 因为它发生时的`Crash`堆栈信息往往不是导致问题的根本原因，而只是压死骆驼的最后一根稻草。
 - 导致`OOM`的原因大部分如下：
-    - 第一是内存泄漏，大量无用对象没有被及时回收导致后续申请内存失败；第二是大内存对象过多，最常见的大对象就是`Bitmap`，几个大图同时加载很容易触发OOM。
+    - 第一是内存泄漏，大量无用对象没有被及时回收导致后续申请内存失败；
+    - 第二是大内存对象过多，最常见的大对象就是`Bitmap`，几个大图同时加载很容易触发OOM。
 
 
 
@@ -285,7 +291,8 @@
     - 匿名内部类实现`Handler`处理消息，可能导致隐式持有的`Activity`对象无法回收。
     - `Activity`和`Context`对象被混淆和滥用，在许多只需要Application Context而不需要使用Activity对象的地方使用了Activity对象，比如注册各类Receiver、计算屏幕密度等等。
     - `View`对象处理不当，使用`Activity`的`LayoutInflater`创建的View自身持有的Context对象其实就是Activity，这点经常被忽略，在自己实现View重用等场景下也会导致Activity泄漏。
-- 对于Activity泄漏，目前已经有了一个非常好用的检测工具：LeakCanary，它可以自动检测到所有Activity的泄漏情况，并且在发生泄漏时给出十分友好的界面提示，同时为了防止开发人员的疏漏，我们也会将其上报到服务器，统一检查解决。
+- 对于Activity泄漏，目前已经有了一个非常好用的检测工具：
+    - LeakCanary，它可以自动检测到所有Activity的泄漏情况，并且在发生泄漏时给出十分友好的界面提示，同时为了防止开发人员的疏漏，我们也会将其上报到服务器，统一检查解决。
 
 
 #### 4.2 大对象
@@ -300,7 +307,9 @@
 
 
 ### 05.三方库导致Crash
-- `App`经常会依赖很多AAR，每个AAR可能有多个版本，打包时Gradle会根据规则确定使用的最终版本号（默认选择最高版本或者强制指定的版本），而其他版本的AAR将被丢弃。如果互相依赖的AAR中有不兼容的版本，存在的问题在打包时是不能发现的，只有在相关代码执行时才会出现，会造成`NoClassDefFoundError`、`NoSuchFieldError`、`NoSuchMethodError`等异常。
+- `App`经常会依赖很多AAR
+    - 每个AAR可能有多个版本，打包时Gradle会根据规则确定使用的最终版本号（默认选择最高版本或者强制指定的版本），而其他版本的AAR将被丢弃。
+    - 如果互相依赖的AAR中有不兼容的版本，存在的问题在打包时是不能发现的，只有在相关代码执行时才会出现，会造成`NoClassDefFoundError`、`NoSuchFieldError`、`NoSuchMethodError`等异常。
 - Defensor在编译时通过DexTask获取到所有的输入文件(也就是被编译过的class文件)，然后检查每个文件里引用的类、字段、方法等是否存在。
 
 
@@ -356,11 +365,13 @@
 
 
 #### 7.2 大图监控
-- 大对象是导致`OOM`的主要原因之一，而`Bitmap`是App里最常见的大对象类型，因此对占用内存过大的Bitmap对象的监控就很有必要了。
+- 大对象是导致`OOM`的主要原因之一
+    - `Bitmap`是App里最常见的大对象类型，因此对占用内存过大的Bitmap对象的监控就很有必要了。
 - 用AOP方式Hook了三种常见图片库的加载图片回调方法，同时监控图片库加载图片时的两个维度：
     - 加载图片使用的URL。App中除静态资源外，所有图片都要求发布到专用的图片CDN服务器上，加载图片时使用正则表达式匹配URL，除了限定CDN域名之外还要求所有图片加载时都要添加对应的动态缩放参数。
     - 最终加载出的图片结果（也就是Bitmap对象）。我们知道`Bitmap`对象所占内存和其分辨率大小成正比，而一般情况下在`ImageView`上设置超过自身尺寸的图片是没有意义的，所以要求显示在`ImageView`中的Bitmap分辨率不允许超过View自身的尺寸（为了降低误报率也可以设定一个报警阈值）。
 - 开发过程中，在App里检测到不合规的图片时会立即高亮出错的`ImageView`所在的位置并弹出对话框提示`ImageView`所在的`Activity`加载图片使用的URL等信息，辅助开发同学定位并解决问题。在Release环境下可以将报警信息上报到服务器，实时观察数据，有问题及时处理。
+
 
 
 #### 7.3 Lint检查
