--- a/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
+++ b/Read/ReadMeWiki/06.Framework/13.View绘制流程分析.md
@@ -6,7 +6,7 @@
 - 04.performLayout布局
 - 05.performDraw绘制
 - 06.View绘制流程总结下
-
+- 07.View如何显示在屏幕
 
 
 ### 01.addView的流程分析
@@ -99,6 +99,31 @@
     - View的绘制流程：onDraw等方法；
     - View组件的绘制流程会在onMeasure,onLayout以及onDraw方法中执行分发逻辑，也就是在onMeasure同时执行子View的测量大小逻辑，在onLayout中同时执行子View的测量位置逻辑，在onDraw中同时执行子View的绘制逻辑；
     - Activity中都对应这个一个Window对象，而每一个Window对象都对应着一个新的WindowManager对象（WindowManagerImpl实例）；
+
+
+
+### 07.View如何显示在屏幕
+- 一个 view 究竟是如何显示在屏幕上的？
+    - 一般都比较了解 view 渲染的三大流程，但是 view 的渲染远不止于此：此处以一个通用的硬件加速流程来表征
+    - ![image](https://img-blog.csdnimg.cn/1a64ad8a867f40689eff87d592fea5b1.png)
+- 关于整个View显示在屏幕上的流程如下
+    - Vsync 调度：很多同学的一个认知误区在于认为 vsync 是每 16ms 都会有的，但是其实 vsync 是需要调度的，没有调度就不会有回调；
+    - 消息调度：主要是 doframe 的消息调度，如果消息被阻塞，会直接造成卡顿；
+    - input 处理：触摸事件的处理；
+    - 动画处理：animator 动画执行和渲染；
+    - view 处理：主要是 view 相关的遍历和三大流程；
+    - measure、layout、draw：view 三大流程的执行；
+    - DisplayList 更新：view 硬件加速后的 draw op；
+    - OpenGL 指令转换：绘制指令转换为 OpenGL 指令；
+    - 指令 buffer 交换：OpenGL 的指令交换到 GPU 内部执行；
+    - GPU 处理：GPU 对数据的处理过程；
+    - layer 合成：surface buffer 合成屏幕显示 buffer 的流程；
+    - 光栅化：将矢量图转换为位图；
+    - Display：显示控制；
+    - buffer 切换：切换屏幕显示的帧 buffer；
+
+
+
 
 
 
