--- a/Read/ReadBlogWiki/01.出发启程/01.书的序言和介绍.md
+++ b/Read/ReadBlogWiki/01.出发启程/01.书的序言和介绍.md
@@ -10,11 +10,13 @@
 
 
 ### 01.看过就以为做到
+- 网络课程我买了。**但是买了课程不等于学会了**。就像你以为学习课程懂了，但一实践或者讨论，又经不起推敲。
 - 文章我都收藏了。**但是收藏不等于做到了**。就像你学完的内容，这些知识还是别人的，不是你的。当学完后，这份学习的责任就递交给你了。
 - 书籍我都看完了。**但是看完不等于吸收了**。就像你读完的内容，如果不去思考和没有自己的见解或感受。当过段时间，许多知识点也就忘记了。
 - 什么时候才会真正的内化？首先需要实践，并从中得到反馈，经过这样的一个过程，才能把知识真正地内化。**很多时候，缺少了实践反馈机制**。
 - 如何帮助你学得更好，在进行这次课程准备的时候，曾问自己：现在不缺知识，不缺信息吧？答案是肯定的，每天新闻，书籍，博客等都是那么多。
 - 为什么大家会花时间来学习这样一个系列课呢？后来找到了答案——需要给大家更多的附加值。**这个附加值不应该只是知识，而是怎么更有效地学习和输出**。
+
 
 
 ### 02.真正实现的目标
@@ -36,7 +38,7 @@
 
 ### 05.布置作业要实践
 - 布置作业。一旦有了作业，就会督促我们更好地去思考、去反思。现在的慢，才是将来的快。想一想读书的时候，为什么学习的知识点很熟悉，那是因为课前预习，课后演练，这样可以让学习的东西印象更加深刻。
-
+- 那么作业一般怎么实践呢？要么学了就去用；要么学了就去表达；要么学了就去教。在实践的过程中，我们将对学习的知识点印象更加深刻。
 
 
 ### 06.走出自己舒适圈
