--- a/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
@@ -40,7 +40,7 @@
 ### 01.卡顿整体概述
 #### 1.1 项目背景
 - App中卡顿让用户使用体验不佳
-    - 在复杂的项目环境中，由于历史代码庞大，业务复杂，包含各种第三方库，所以在出现了卡顿的时候，我们很难定位到底是哪里出现了问题，即便知道是哪一个Activity/Fragment，也仍然需要进去里面一行一行看，动辄数千行的类再加上跳来跳去调来调去的，结果就是不了了之随它去了，实在不行了再优化吧。
+    - 在复杂的项目环境中，由于历史代码庞大，业务复杂，包含各种第三方库，所以在出现了卡顿的时候，很难定位到底是哪里出现了问题，即便知道是哪一个Activity/Fragment，也仍然需要进去里面一行一行看，动辄数千行的类再加上跳来跳去调来调去的，结果就是不了了之随它去了，实在不行了再优化吧。
 - 卡顿可能引发未知问题
     - 卡顿还可能会引发一些未知的问题，比如卡顿会造成掉帧，会造成抖动，设置还会造成ANR，对用户来说体验特别不好。简单来说，就是APP用起来有点卡……
 - 排查卡顿问题非常费劲
@@ -49,7 +49,8 @@
 
 #### 1.2 卡顿介绍
 - 什么是卡顿
-    - 界面呈现是指从应用生成帧并将其显示在屏幕上的动作。我们要确保用户能够流畅地与应用互动，我们的应用呈现每帧的时间不应超过16ms，以达到每秒 60 帧的呈现速度。如果我们的应用存在界面呈现缓慢的问题，系统会不得不跳过一些帧，这会导致用户感觉您的应用不流畅。我们将这种情况称为卡顿。
+    - 界面呈现是指从应用生成帧并将其显示在屏幕上的动作。我们要确保用户能够流畅地与应用互动，我们的应用呈现每帧的时间不应超过16ms，以达到每秒 60 帧的呈现速度。
+    - 如果我们的应用存在界面呈现缓慢的问题，系统会不得不跳过一些帧，这会导致用户感觉您的应用不流畅。我们将这种情况称为卡顿。
 - UI线程执行时间
     - 在Android中，UI线程负责执行UI视图的布局、渲染等工作，UI在更新期间，如果UI线程执行时间超过了16ms，则就会产生丢帧的现象，大量的丢帧，就会造成卡顿，影响用户体验。
     - Android中规定，每秒可以执行60次屏幕刷新，当我们的APP能够达到60帧/秒时，这种体验是优秀的，当帧率降低到40帧以下，甚至30帧以下，用户就可以感知到卡顿了。
