--- a/Read/ReadMeWiki/00.方案实践/07.卡顿治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.卡顿治理优化实践.md
@@ -15,11 +15,11 @@
 - 04.UI卡顿
     - 4.1 View卡顿点
     - 4.2 UI卡顿优化
+    - 4.3 过渡绘制卡顿
 - 05.线程卡顿
     - 5.1 卡顿实践思路
     - 5.2 UI线程被阻塞
-- 06.过渡绘制卡顿
-    - 6.1 
+
 
 
 
