--- a/Read/ReadMeWiki/06.Framework/18.Android事件拦截.md
+++ b/Read/ReadMeWiki/06.Framework/18.Android事件拦截.md
@@ -22,7 +22,9 @@
     - 4.5 拦截DOWN事件
     - 4.6 拦截后续事件（MOVE、UP）
 - 05.事件机制源码分析
-    - 5.1 
+    - 5.1 Activity事件分发机制
+    - 5.2 ViewGroup事件分发机制
+    - 5.3 View事件分发机制
 - 06.事件冲突案例分析
     - 6.1 滑动冲突说明
     - 6.2 外部拦截法
@@ -44,8 +46,7 @@
 #### 1.2 什么是事件序列
 - 什么是事件序列？可以将其理解为 **用户一次完整的触摸操作流程**。
     - 举例来说，用户单击按钮、用户滑动屏幕、用户长按屏幕中某个UI元素等等，都属于该范畴。
-- Android中的TouchEvent/MotionEvent
-    - 每一次我们触摸屏幕，都会产生一连串的触摸事件，这些一连串的触摸事件合起来就是一个触摸事件序列。
+    - 每一次我们触摸屏幕，都会产生一连串的触摸事件(`MotionEvent`)，这些一连串的触摸事件合起来就是一个触摸事件序列。
 
 
 
@@ -211,10 +212,115 @@
 
 
 
+#### 5.2 ViewGroup事件分发机制
+- ViewGroup的dispatchTouchEvent()源码分析
+    - ViewGroup#dispatchTouchEvent()，这个是事件分发的入口。在这个里面做了很多逻辑处理
+    ``` java
+    // 发生ACTION_DOWN事件或者已经发生过ACTION_DOWN，并且将mFirstTouchTarget赋值，才进入此区域，主要功能是拦截器
+    final boolean intercepted;
+    if (actionMasked == MotionEvent.ACTION_DOWN|| mFirstTouchTarget != null) {
+        //disallowIntercept：是否禁用事件拦截的功能(默认是false)，即不禁用
+        //可以在子View通过调用requestDisallowInterceptTouchEvent方法对这个值(FLAG_DISALLOW_INTERCEPT)进行修改，不让该View拦截事件
+        final boolean disallowIntercept = (mGroupFlags & FLAG_DISALLOW_INTERCEPT) != 0;
+        //默认情况下会进入该方法
+        if (!disallowIntercept) {
+            //调用拦截方法
+            intercepted = onInterceptTouchEvent(ev); 
+            ev.setAction(action);
+        } else {
+            intercepted = false;
+        }
+    } else {
+        // 当没有触摸targets，且不是down事件时，开始持续拦截触摸。
+        intercepted = true;
+    }
+    ```
+    - 这一段的内容主要是为判断是否拦截。如果当前事件的MotionEvent.ACTION_DOWN，则进入判断，调用ViewGroup onInterceptTouchEvent()方法的值，判断是否拦截。
+    - 如果mFirstTouchTarget != null，即已经发生过MotionEvent.ACTION_DOWN，并且该事件已经有ViewGroup的子View进行处理了，那么也进入判断，调用ViewGroup onInterceptTouchEvent()方法的值，判断是否拦截。
+    - 如果不是以上两种情况，即已经是MOVE或UP事件了，并且之前的事件没有对象进行处理，则设置成true，开始拦截接下来的所有事件。
+    - 这也就解释了如果子View的onTouchEvent()方法返回false，那么接下来的一些列事件都不会交给他处理。
+    - 如果VieGroup的onInterceptTouchEvent()第一次执行为true，则mFirstTouchTarget = null，则也会使得接下来不会调用onInterceptTouchEvent()，直接将拦截设置为true。
+- 当ViewGroup不拦截事件的时候，事件会向下分发交由它的子View或ViewGroup进行处理。
+    ```
+      /* 从最底层的父视图开始遍历，
+       ** 找寻newTouchTarget，即上面的mFirstTouchTarget
+       ** 如果已经存在找寻newTouchTarget，说明正在接收触摸事件，则跳出循环。
+        */
+    for (int i = childrenCount - 1; i >= 0; i--) {
+      final int childIndex = customOrder
+        ? getChildDrawingOrder(childrenCount, i) : i;
+      final View child = (preorderedList == null)
+        ? children[childIndex] : preorderedList.get(childIndex);
+    
+      // 如果当前视图无法获取用户焦点，则跳过本次循环
+      if (childWithAccessibilityFocus != null) {
+         if (childWithAccessibilityFocus != child) {
+            continue;
+         }
+         childWithAccessibilityFocus = null;
+         i = childrenCount - 1;
+      }
+      //如果view不可见，或者触摸的坐标点不在view的范围内，则跳过本次循环
+      if (!canViewReceivePointerEvents(child) 
+          || !isTransformedTouchPointInView(x, y, child, null)) {
+        ev.setTargetAccessibilityFocus(false);
+        continue;
+        }
+    
+       newTouchTarget = getTouchTarget(child);
+       // 已经开始接收触摸事件,并退出整个循环。
+       if (newTouchTarget != null) {
+           newTouchTarget.pointerIdBits |= idBitsToAssign;
+           break;
+        }
+    
+        //重置取消或抬起标志位
+        //如果触摸位置在child的区域内，则把事件分发给子View或ViewGroup
+        if (dispatchTransformedTouchEvent(ev, false, child, idBitsToAssign)) {
+            // 获取TouchDown的时间点
+            mLastTouchDownTime = ev.getDownTime();
+            // 获取TouchDown的Index
+            if (preorderedList != null) {
+               for (int j = 0; j < childrenCount; j++) {
+                   if (children[childIndex] == mChildren[j]) {
+                        mLastTouchDownIndex = j;
+                        break;
+                    }
+               }
+             } else {
+                     mLastTouchDownIndex = childIndex;
+                    }
+    
+          //获取TouchDown的x,y坐标
+          mLastTouchDownX = ev.getX();
+          mLastTouchDownY = ev.getY();
+          //添加TouchTarget,则mFirstTouchTarget != null。
+          newTouchTarget = addTouchTarget(child, idBitsToAssign);
+          //表示以及分发给NewTouchTarget
+          alreadyDispatchedToNewTouchTarget = true;
+          break;
+    }
+    ```
+    - `dispatchTransformedTouchEvent()`方法实际就是调用子元素的`dispatchTouchEvent()`方法。其中`dispatchTransformedTouchEvent()`方法的重要逻辑如下：
+    ``` java
+    if (child == null) {
+        handled = super.dispatchTouchEvent(event);
+    } else {
+        handled = child.dispatchTouchEvent(event);
+    }
+    ```
+    - 由于其中传递的child不为空，所以就会调用子元素的dispatchTouchEvent()。如果子元素的dispatchTouchEvent()方法返回true，那么mFirstTouchTarget就会被赋值，同时跳出for循环。
+    ``` java
+    //添加TouchTarget,则mFirstTouchTarget != null。
+    newTouchTarget = addTouchTarget(child, idBitsToAssign);
+     //表示以及分发给NewTouchTarget
+     alreadyDispatchedToNewTouchTarget = true;
+    ```
+    - 其中在`addTouchTarget(child, idBitsToAssign);`内部完成mFirstTouchTarget被赋值。如果mFirstTouchTarget为空，将会让ViewGroup默认拦截所有操作。如果遍历所有子View或ViewGroup，都没有消费事件。ViewGroup会自己处理事件。
 
 
 
-
+#### 5.3 View事件分发机制
 
 
 
