--- a/Read/ReadBlogWiki/01.出发启程/02.需求层次的模型.md
+++ b/Read/ReadBlogWiki/01.出发启程/02.需求层次的模型.md
@@ -29,9 +29,11 @@
 - 人在满足了基本的需求之后，就要去实现更高的需求和目标。一个人可以有自我实现的愿望，但要达到自我实现的境界，成为一个自我实现的人，却不是每个人都能办到的，这种人也只是少数而已。
 
 
+
 ### 03.自己在那个层次
 - 想一想现在的自己是处在哪一个层次，自己的梦想又是上升到哪一个层次？人们总是优先满足生理需求，而自我实现的需求则是最难以满足的。
 - 人们会一直不停地追求各种目标，当这种需要得到满足以后，又会有其他需要，继续去寻找其他新的目标。
+
 
 
 ### 04.不同阶段的追求
@@ -60,10 +62,9 @@
 
 ### 06.层次的激励措施
 #### 6.1 常见激励措施
-- 生理需求；激励措施：涨自己的工资、改善劳动条件、给予自己更多业余时间和休息、努力找到更好的福利待遇。
+- 生理需求；激励措施：涨自己的工资、改善劳动条件、给予自己更多业余时间和休息、努力找到更好的福利待遇。让衣食住行不再担忧！
 - 安全需求；激励措施：希望自己职业保障、福利待遇，并保护自己不致失业，提供医疗保险、失业保险和退休福利、避免收到双重的指令而混乱。
 - 社交需求；激励措施：多和同事间社交往来机会，支持与赞许他人寻找及建立和谐温馨的人际关系，多参加有组织的体育比赛和聚会。
-
 
 
 #### 6.2 自我价值激励
@@ -82,9 +83,8 @@
 
 
 #### 7.2 看几个案例
-- 1.小明很努力，但是工作还是没发做上高管，小康达到但是没能实现个人社会价值，成为世俗眼中的成功者。请用马斯洛需求层次分析该案例。
-
-
+- 1.小明很努力，但是工作还是没办法做上高管，小康达到但是没能实现个人社会价值。请用马斯洛需求层次分析该案例。
+- 2.工作多年，你是否在生涯四个维度上有所提升？这种提升是否给你带来了潜在的价值？你在那个层次？
 
 
 
