--- a/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/06.卡顿监控设计实践.md
@@ -105,6 +105,7 @@
     - 一些卡顿监控工具，经常被拿来监控ANR（卡顿阈值设置为5秒），这其实很不严谨：首先，5秒只是发生ANR的其中一种原因（Touch事件5秒未被及时消费）的阈值，而其他原因发生ANR的阈值并不是5秒；另外，就算是主线程卡顿了5秒，如果用户没有输入任何的Touch事件，同样是不会发生ANR的，更何况还有后台ANR等情况。
 
 
+
 #### 2.3 什么是FPS流畅度
 - 流畅度，是页面在滑动、渲染等过程中的体验。
     - Android系统要求每一帧都要在 16ms 内绘制完成，平滑的完成一帧意味着任何特殊的帧需要执行所有的渲染代码（包括 framework 发送给 GPU 和 CPU 绘制到缓冲区的命令）都要在 16ms 内完成，保持流畅的体验。
@@ -179,7 +180,6 @@
 
 
 
-
 ### 04.卡顿监听思路
 #### 4.1 卡顿监控核心思路
 - 可以监控卡顿，从而可以对卡顿优化做到极致。我们可以从下面四个方面来监控应用程序卡顿:
@@ -201,7 +201,7 @@
     - 在Printer中判断start和end，来获取主线程dispatch该message的开始和结束时间，并判定该时间超过阈值(如2000毫秒)为主线程卡慢发生，并dump出各种信息，提供开发者分析性能瓶颈。
     - 卡顿之后收集相关dump信息，主要包含一些基本信息，耗时信息，CPU信息还有堆栈信息等等。可以直接参考LeakCanary即可。
 - 优缺点分析
-    - 优点：不会随机漏报，无需轮询，一劳永逸；缺点：某些类型的卡顿无法被监控到
+    - 优点：不会随机漏报，无需轮询，一劳永逸；缺点：某些类型的卡顿无法被监控到。
 
 
 
