--- a/Read/ReadMeWiki/00.方案实践/07.卡顿治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.卡顿治理优化实践.md
@@ -25,6 +25,16 @@
 
 
 ### 01.卡顿基础介绍
+#### 1.1 项目背景
+
+
+
+#### 1.2 遇到问题
+
+
+#### 1.3 基础概念
+
+
 #### 1.4 卡顿指标
 
 
@@ -73,7 +83,7 @@
     - 渲染机制中的任何流转过程发生异常，均会造成卡顿。逐个分析，看看都会有哪些原因可能造成卡顿。
 - 渲染流程中的卡顿分析
     - Vsync 调度：这个是起始点，但是调度的过程会经过线程切换以及一些委派的逻辑，有可能造成卡顿，但是一般可能性比较小，我们也基本无法介入；
-    - 消息调度：主要是 doframe Message 的调度，这就是一个普通的 Handler 调度，如果这个调度被其他的 Message 阻塞产生了时延，会直接导致后续的所有流程不会被触发。这里直播建立了一个 WatchDog 机制，可以通过优化消息调度达到插帧的效果，使得界面更加流畅；
+    - 消息调度：主要是 doframe Message 的调度，这就是一个普通的 Handler 调度，如果这个调度被其他的 Message 阻塞产生了时延，会直接导致后续的所有流程不会被触发。这里建立了一个 WatchDog 机制，可以通过优化消息调度达到插帧的效果，使得界面更加流畅；
     - input 处理：input 是一次 Vsync 调度最先执行的逻辑，主要处理 input 事件。如果有大量的事件堆积或者在事件分发逻辑中加入大量耗时业务逻辑，会造成当前帧的时长被拉大，造成卡顿。可以尝试过事件采样的方案，减少 event 的处理；
     - 动画处理：主要是 animator 动画的更新，同理，动画数量过多，或者动画的更新中有比较耗时的逻辑，也会造成当前帧的渲染卡顿。对动画的降帧和降复杂度其实解决的就是这个问题；
     - view 处理：主要是接下来的三大流程，过度绘制、频繁刷新、复杂的视图效果都是此处造成卡顿的主要原因。比如我们平时所说的降低页面层级，主要解决的就是这个问题；
