--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -10,14 +10,13 @@
     - 2.2 缓存策略有哪些
     - 2.3 常见存储方案
     - 2.4 存储方案优缺点
-    - 2.5 存储数据迁移
-    - 2.6 存储如何优化
+    - 2.6 存储方案的不足
     - 2.7 使用缓存注意点
 - 03.存储方案原理
     - 3.1 Sp存储原理分析
     - 3.2 MMKV存储原理分析
     - 3.3 LruCache原理分析
-    - 3.4 DiskLruCache分析
+    - 3.4 DiskLru原理分析
     - 3.5 FastSp原理分析
     - 3.6 HashMap存储分析
     - 3.7 Sqlite存储分析
@@ -29,8 +28,8 @@
     - 4.5 缓存的阀值处理
     - 4.6 缓存的线程安全性
     - 4.7 缓存数据的迁移
-    - 4.8 缓存数据加密
-    - 4.9 各种缓存效率对比
+    - 4.8 缓存数据加密处理
+    - 4.9 缓存效率的对比
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -38,7 +37,7 @@
     - 5.4 接口设计图
     - 5.5 模块间依赖关系
 - 06.其他设计说明
-    - 6.1 性能设计
+    - 6.1 性能设计说明
     - 6.2 稳定性设计
     - 6.3 灰度设计
     - 6.4 降级设计
@@ -61,21 +60,28 @@
 
 ### 01.整体概述说明
 #### 1.1 项目背景介绍
-- 项目中很多地方使用缓存方案，有的用sp，有的用mmkv，有的用lru，有的用DataStore，有的用sqlite，如何打造通用api切换操作不同存储方案？
-- 缓存方案众多，且各自使用场景有差异，如何选择合适的缓存方式？同时思考如何替换之前老的存储方案，而不用花费很大的时间成本！
-- 针对不同的业务场景，不同的缓存方案。打造一套通用的方案，屏蔽各种缓存方式的差异性，暴露给外部开发者统一的API，简化使用，提高开发效率和使用效率……
+- 项目中很多地方使用缓存方案
+    - 有的用sp，有的用mmkv，有的用lru，有的用DataStore，有的用sqlite，如何打造通用api切换操作不同存储方案？
+- 缓存方案众多，且各自使用场景有差异，如何选择合适的缓存方式？
+    - 针对不同场景选择什么缓存方式，同时思考如何替换之前老的存储方案，而不用花费很大的时间成本！
+- 针对不同的业务场景，不同的缓存方案。打造一套通用的方案
+    - 屏蔽各种缓存方式的差异性，暴露给外部开发者统一的API，外部开发者简化使用，提高开发效率和使用效率……
+
 
 
 #### 1.2 遇到问题记录
-- 问题1：各种缓存方案，分别是如何保证数据安全的，其内部使用到了哪些锁？由于引入锁，给效率上带来了什么影响？
-- 问题2：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
-- 问题3：各种缓存方案使用场景是什么？有什么缺陷，为了解决缺陷做了些什么？比如sp存在缺陷的替代方案是DataStore，为何这样？
-- 问题4：各种缓存方案，他们的缓存效率是怎样的？如何对比？接入该库后，如何做数据迁移，如何覆盖操作？
+- 记录几个常见的问题
+    - 问题1：各种缓存方案，分别是如何保证数据安全的，其内部使用到了哪些锁？由于引入锁，给效率上带来了什么影响？
+    - 问题2：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
+    - 问题3：各种缓存方案使用场景是什么？有什么缺陷，为了解决缺陷做了些什么？比如sp存在缺陷的替代方案是DataStore，为何这样？
+    - 问题4：各种缓存方案，他们的缓存效率是怎样的？如何对比？接入该库后，如何做数据迁移，如何覆盖操作？
 
 
 #### 1.3 基础概念介绍
-- 提及缓存，可能很容易想到Http的缓存机制，LruCache，其实缓存最初是针对于网络而言的，也是狭义上的缓存，广义的缓存是指对数据的复用。
-- 缓存容量，就是缓存的大小，到达这个限度以后，那么就须要进行缓存清理了框架。这个时候就需要删除一些旧的缓存并添加新的缓存。
+- 最初缓存的概念
+    - 提及缓存，可能很容易想到Http的缓存机制，LruCache，其实缓存最初是针对于网络而言的，也是狭义上的缓存，广义的缓存是指对数据的复用。
+- 缓存容量，就是缓存的大小
+    - 每一种缓存，总会有一个最大的容量，到达这个限度以后，那么就须要进行缓存清理了框架。这个时候就需要删除一些旧的缓存并添加新的缓存。
 
 
 #### 1.4 设计目标
@@ -102,20 +108,19 @@
     - 内存缓存和磁盘缓存结合。比如，LruCache将图片保存在内存，存取速度较快，退出APP后缓存会失效；而DiskLruCache将图片保存在磁盘中，下次进入应用后缓存依旧存在，它的存取速度相比LruCache会慢上一些。
 
 
-
 #### 2.2 缓存策略有哪些
 - 不论是内存缓存仍是磁盘缓存，缓存的容量都是有限制的，因此跟线程池满了以后的线程处理策略相似，当缓存容量达到设定的容量的时候，会根据制定的策略进行删除相应的元素。常见的策略有：
-- FIFO(first in first out)：先进先出策略，相似队列。
-- LFU(less frequently used)：最少使用策略，RecyclerView的缓存采用了此策略。
-- LRU(least recently used):最近最少使用策略，Glide在进行内存缓存的时候采用了此策略。
+    - FIFO(first in first out)：先进先出策略，相似队列。
+    - LFU(less frequently used)：最少使用策略，RecyclerView的缓存采用了此策略。
+    - LRU(least recently used):最近最少使用策略，Glide在进行内存缓存的时候采用了此策略。
 
 
 
 #### 2.3 常见存储方案
 - 内存缓存：存储在内存中，如果对象销毁则内存也会跟随销毁。如果是静态对象，那么进程杀死后内存会销毁。
-    - Map，LruCache
+    - Map，LruCache等等
 - 磁盘缓存：后台应用有可能会被杀死，那么相应的内存缓存对象也会被销毁。当你的应用重新回到前台显示时，你需要用到缓存数据时，这个时候可以用磁盘缓存。
-    - SharedPreferences，MMKV，DiskLruCache，SqlLite，DataStore，ACache，Room
+    - SharedPreferences，MMKV，DiskLruCache，SqlLite，DataStore，Room，Realm，GreenDao等等
 
 
 #### 2.4 存储方案优缺点
@@ -123,10 +128,10 @@
     - Map：内存缓存，一般用HashMap存储一些数据，主要存储一些临时的对象
     - LruCache：内存淘汰缓存，内部使用LinkedHashMap，会淘汰最长时间未使用的对象
 - 磁盘缓存
-    - SharedPreferences：轻量级磁盘存储，一般存储配置属性，线程安全。
-    - MMKV：腾讯开源存储库，内部采用mmpv
+    - SharedPreferences：轻量级磁盘存储，一般存储配置属性，线程安全。建议不要存储大数据，不支持跨进程！
+    - MMKV：腾讯开源存储库，内部采用mmpv。
     - DiskLruCache：磁盘淘汰缓存，写入数据到file文件
-    - SqlLite：移动端轻量级数据库
+    - SqlLite：移动端轻量级数据库。主要是用来对象持久化存储。
     - DataStore：旨在替代原有的 SharedPreferences，支持SharedPreferences数据的迁移
     - Room：支持大型或复杂数据集
     - Realm：支持大型或复杂数据集
@@ -134,18 +139,15 @@
     - ACache：一款高效二级存储库，采用内存缓存和磁盘缓存
 
 
-#### 2.5 存储数据迁移
 
-
-#### 2.6 存储如何优化
-- 针对SharedPreferences优化有：
-    - 它设计初衷是轻量级，当存储文件中key-value数据超过30个，如果超过30个，则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
-
+#### 2.6 存储方案的不足
 
 
 
 #### 2.7 使用缓存注意点
 - 在使用内存缓存的时候须要注意防止内存泄露，使用磁盘缓存的时候注意确保缓存的时效性
+- 针对SharedPreferences优化有：
+    - 它设计初衷是轻量级，当存储文件中key-value数据超过30个，如果超过30个，则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
 
 
 
@@ -165,6 +167,15 @@
 
 
 #### 3.2 MMKV存储原理分析
+- MMKV存储框架介绍
+    - MMKV 是基于 mmap 内存映射的 key-value 组件，底层序列化/反序列化使用 protobuf 实现，性能高，稳定性强。
+- MMKV设计的原理
+    - 内存准备：通过 mmap 内存映射文件，提供一段可供随时写入的内存块，App 只管往里面写数据，由操作系统负责将内存回写到文件，不必担心 crash 导致数据丢失。
+    - 数据组织：数据序列化方面我们选用 protobuf 协议，pb 在性能和空间占用上都有不错的表现。
+    - 写入优化：考虑到主要使用场景是频繁地进行写入更新，我们需要有增量更新的能力。我们考虑将增量 kv 对象序列化后，append 到内存末尾。
+    - 空间增长：使用 append 实现增量更新带来了一个新的问题，就是不断 append 的话，文件大小会增长得不可控。我们需要在性能和空间上做个折中。
+
+
 
 
 #### 3.3 LruCache原理分析
@@ -182,7 +193,7 @@
 
 
 
-#### 3.4 DiskLruCache分析
+#### 3.4 DiskLru原理分析
 - DiskLruCache 用于实现存储设备缓存，即磁盘缓存，它通过将缓存对象写入文件系统从而实现缓存的效果。
     - DiskLruCache最大的特点就是持久化存储，所有的缓存以文件的形式存在。在用户进入APP时，它根据日志文件将DiskLruCache恢复到用户上次退出时的情况，日志文件journal保存每个文件的下载、访问和移除的信息，在恢复缓存时逐行读取日志并检查文件来恢复缓存。
 
@@ -220,7 +231,13 @@
 
 
 
-#### 4.9 各种缓存效率对比
+#### 4.9 缓存效率的对比
+- 测试数据
+    - 测试写入和读取
+- 比较对象
+    - SharePreferences/DataStore/MMKV/LruDisk
+- 测试机型
+
 
 
 
@@ -296,6 +313,8 @@
     - https://juejin.cn/post/6939473558259105805/
 - MMKV, DataStore, 数据库, Sp 性能大比拼
     - https://mp.weixin.qq.com/s/vimX6bnJDkPbXAqVJCbbfw
+- 再见 MMKV，自己撸一个FastKV，真的很快
+    - https://mp.weixin.qq.com/s/RLg1q1IxC-mYUNKgrZuZRg
 
 
 
