--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -10,14 +10,14 @@
     - 2.2 缓存策略有哪些
     - 2.3 常见存储方案
     - 2.4 存储方案优缺点
-    - 2.6 存储方案的不足
-    - 2.7 使用缓存注意点
+    - 2.5 存储方案的不足
+    - 2.6 使用缓存注意点
 - 03.存储方案原理
     - 3.1 Sp存储原理分析
     - 3.2 MMKV存储原理分析
     - 3.3 LruCache原理分析
     - 3.4 DiskLru原理分析
-    - 3.5 FastSp原理分析
+    - 3.5 DataStore分析
     - 3.6 HashMap存储分析
     - 3.7 Sqlite存储分析
 - 04.通用缓存方案思路
@@ -41,7 +41,7 @@
     - 6.2 稳定性设计
     - 6.3 灰度设计
     - 6.4 降级设计
-    - 6.5 异常设计
+    - 6.5 异常设计说明
     - 6.6 兼容性设计
     - 6.7 自测case设计
 - 07.通用Api设计
@@ -140,14 +140,20 @@
 
 
 
-#### 2.6 存储方案的不足
+#### 2.5 存储方案的不足
+- 
 
 
-
-#### 2.7 使用缓存注意点
+#### 2.6 使用缓存注意点
 - 在使用内存缓存的时候须要注意防止内存泄露，使用磁盘缓存的时候注意确保缓存的时效性
-- 针对SharedPreferences优化有：
-    - 它设计初衷是轻量级，当存储文件中key-value数据超过30个，如果超过30个，则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
+- 针对SharedPreferences使用建议有：
+    - 因为 SharedPreferences 虽然是全量更新的模式，但只要把保存的数据用合适的逻辑拆分到多个不同的文件里，全量更新并不会对性能造成太大的拖累。
+    - 它设计初衷是轻量级，建议当存储文件中key-value数据超过30个，如果超过30个（这个只是一个假设），则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
+- 针对MMKV使用建议有：
+    - 
+- 针对DataStore使用建议有：
+    - 
+
 
 
 
@@ -166,15 +172,24 @@
 
 
 
+
 #### 3.2 MMKV存储原理分析
+- 早期微信的需求
+    - 微信聊天对话内容中的特殊字符所导致的程序崩溃是一类很常见、也很需要快速解决的问题；而哪些字符会导致程序崩溃，是无法预知的。
+    - 只能等用户手机上的微信崩溃之后，再利用类似时光倒流的回溯行为，看看上次软件崩溃的最后一瞬间，用户收到或者发出了什么消息，再用这些消息中的文字去尝试复现发生过的崩溃，最终试出有问题的字符，然后针对性解决。
+- 该需求对应的技术考量
+    - 考量1：把聊天页面的显示文字写到手机磁盘里，才能在程序崩溃、重新启动之后，通过读取文件的方式来查看。但这种方式涉及到io流读写，且消息多会有性能问题。
+    - 考量2：App程序都崩溃了，如何保证要存储的内容，都写入到磁盘中呢？
+    - 考量3：保存聊天内容到磁盘的行为，这个做成同步还是异步呢？如果是异步，如何保证聊天消息的时序性？
+    - 考量4：如何存储数据是同步行为，针对群里聊天这么多消息，如何才能避免卡顿呢？
+    - 考量5：存储数据放到主线程中，用户在群聊天页面猛滑消息，如何爆发性集中式对磁盘写入数据？
 - MMKV存储框架介绍
     - MMKV 是基于 mmap 内存映射的 key-value 组件，底层序列化/反序列化使用 protobuf 实现，性能高，稳定性强。
 - MMKV设计的原理
     - 内存准备：通过 mmap 内存映射文件，提供一段可供随时写入的内存块，App 只管往里面写数据，由操作系统负责将内存回写到文件，不必担心 crash 导致数据丢失。
     - 数据组织：数据序列化方面我们选用 protobuf 协议，pb 在性能和空间占用上都有不错的表现。
-    - 写入优化：考虑到主要使用场景是频繁地进行写入更新，我们需要有增量更新的能力。我们考虑将增量 kv 对象序列化后，append 到内存末尾。
+    - 写入优化：考虑到主要使用场景是频繁地进行写入更新，我们需要有增量更新的能力。考虑将增量 kv 对象序列化后，append 到内存末尾。
     - 空间增长：使用 append 实现增量更新带来了一个新的问题，就是不断 append 的话，文件大小会增长得不可控。我们需要在性能和空间上做个折中。
-
 
 
 
@@ -183,8 +198,6 @@
     - cache对象通过一个强引用来访问内容。每次当一个item被访问到的时候，这个item就会被移动到一个队列的队首。当一个item被添加到已经满了的队列时，这个队列的队尾的item就会被移除。
 - LruCache核心思想
     - LRU是近期最少使用的算法，它的核心思想是当缓存满时，会优先淘汰那些近期最少使用的缓存对象。采用LRU算法的缓存有两种：LrhCache和DiskLruCache，分别用于实现内存缓存和硬盘缓存，其核心思想都是LRU缓存算法。
-- 初始化设置须知
-    - 需要设置一个最大的值maxSize，主要用于设置LruCache链表的最大值。
 - put方法主要做了什么
     - 需要传递两个参数：K和V，首先做了一下参数的判断，然后定义一个保存前一个Value值得临时变量，让putCount（put执行的次数）自增，让map的size大小自增。
     - LruCache put方法，将键值对压入Map数据结构中，若这是Map的大小已经大于LruCache中定义的最大值，则将Map中最早压入的元素remove掉
@@ -199,6 +212,16 @@
 
 
 
+#### 3.5 DataStore分析
+
+
+
+
+#### 3.6 HashMap存储分析
+
+
+
+
 #### 3.7 Sqlite存储分析
 - 注意：缓存的数据库是存放在/data/data/databases/目录下，是占用内存空间的，如果缓存累计，容易浪费内存，需要及时清理缓存。
 
@@ -206,6 +229,7 @@
 
 ### 04.通用缓存方案思路
 #### 4.1 如何兼容不同缓存
+
 
 
 #### 4.2 打造通用缓存Api
@@ -225,19 +249,30 @@
 
 
 #### 4.7 缓存数据的迁移
+- 如何将Sp数据迁移到DataStore
+    - 1
+- 如何将sp数据迁移到MMKV
+    - 1
 
 
 #### 4.8 缓存数据加密
+- 目前
+
 
 
 
 #### 4.9 缓存效率的对比
 - 测试数据
-    - 测试写入和读取
+    - 测试写入和读取。注意分别使用不同的方式，测试存储或获取相同的数据(数据为int类型数字，还有String类型长字符串)。然后查看耗时时间的长短……
 - 比较对象
-    - SharePreferences/DataStore/MMKV/LruDisk
-- 测试机型
-
+    - SharePreferences/DataStore/MMKV/LruDisk。使用华为手机测试
+- 测试数据案例1
+    - 
+- 测试数据案例2
+    - 
+- 最后思考说明
+    - 从最终的数据来看，这几种方案都不是很慢。虽然这半秒左右的主线程耗时看起来很可怕，但是要知道这是 1000 次连续写入的耗时。
+    - 而在真正写程序的时候，怎么会一次性做 1000 次的长字符串的写入？所以真正在项目中的键值对写入的耗时，不管你选哪个方案，都会比这份测试结果的耗时少得多的，都少到了可以忽略的程度，这是关键。
 
 
 
@@ -255,10 +290,14 @@
 
 
 #### 5.5 模块间依赖关系
+- 
+
 
 
 ### 06.其他设计说明
 #### 6.1 性能设计
+- 
+
 
 
 #### 6.2 稳定性设计
@@ -270,7 +309,13 @@
 #### 6.4 降级设计
 
 
-#### 6.5 异常设计
+#### 6.5 异常设计说明
+- DataStore初始化遇到的坑
+    - 遇到问题：不能将DataStore初始化代码写到Activity里面去，否则重复进入Activity并使用Preferences DataStore时，会尝试去创建一个同名的.preferences_pb文件。
+    - 问题分析：SingleProcessDataStore#check(!activeFiles.contains(it))，该方法会检查如果判断到activeFiles里已经有该文件，直接抛异常，即不允许重复创建。
+    - 如何解决：在项目中只在顶层调用一次 preferencesDataStore 方法，这样可以更轻松地将 DataStore 保留为单例。
+
+
 
 
 #### 6.6 兼容性设计
@@ -295,6 +340,22 @@
 
 ### 08.其他说明介绍
 #### 8.1 遇到的坑分析
+- Sp在存储大量数据可能造成ANR
+    - commit() / apply()操作可能会造成ANR问题
+        - commit()是同步提交，会在UI主线程中直接执行IO操作，当写入操作耗时比较长时就会导致UI线程被阻塞，进而产生ANR；
+        - apply()虽然是异步提交，但异步写入磁盘时，如果执行了Activity / Service中的onStop()方法，那么一样会同步等待SP写入完毕，等待时间过长时也会引起ANR问题。
+    - 首先分析一下SharedPreferences源码中apply方法
+        > SharedPreferencesImpl#apply()，这个方法主要是将记录的数据同步写到Map集合中，然后在开启子线程将数据写入磁盘
+        > SharedPreferencesImpl#enqueueDiskWrite()，这个会将runnable被写入了队列，然后在run方法中写数据到磁盘
+        > QueuedWork#queue()，这个将runnable添加到sWork(LinkedList链表)中，然后通过handler发送处理队列消息MSG_RUN
+    - 然后再看一下ActivityThread源码中的handlePauseActivity()、handleStopActivity()方法。
+        > ActivityThread#handlePauseActivity()/handleStopActivity()，Activity在pause和stop的时候会调用该方法
+        > ActivityThread#handlePauseActivity()#QueuedWork.waitToFinish()，这个是等待QueuedWork所有任务处理完的逻辑
+        > QueuedWork#waitToFinish()，这个里面会通过handler查询MSG_RUN消息是否有，如果有则会waiting等待
+    - 那么最后得出的结论是
+        - handlePauseActivity()的时候会一直等待 apply() 方法将数据保存成功，否则会一直等待，从而阻塞主线程造成 ANR。
+
+
 
 
 #### 8.2 遗留的问题
@@ -315,7 +376,8 @@
     - https://mp.weixin.qq.com/s/vimX6bnJDkPbXAqVJCbbfw
 - 再见 MMKV，自己撸一个FastKV，真的很快
     - https://mp.weixin.qq.com/s/RLg1q1IxC-mYUNKgrZuZRg
-
+- 今日头条 ANR 优化实践系列 - 告别 SharedPreference 等待
+    - https://mp.weixin.qq.com/s/kfF83UmsGM5w43rDCH544g
 
 
 
