--- a/Read/ReadMeWiki/08.思考系列/10.Android数据存储设计.md
+++ b/Read/ReadMeWiki/08.思考系列/10.Android数据存储设计.md
@@ -5,7 +5,7 @@
 - 04.Sp前世今生分析
 - 05.DataStore原理
 - 06.MMKV的存储分析
-- 07.
+- 07.Room数据库分析
 - 08.去黑科技mmap理解
 
 
@@ -16,12 +16,97 @@
 #### 4.1 Sp的主要缺点
 - Sp主要缺点
     - SP用内存层用HashMap保存，磁盘层则是用的XML文件保存。每次更改，都需要将整个HashMap序列化为XML格式的报文然后整个写入文件。
+    - SP读写文件不是类型安全的，且没有发出错误信号的机制，缺少事务性API
+    - commit() / apply()操作可能会造成ANR问题
 - 归结其较慢的原因：
     - 1、不能增量写入；2、序列化比较耗时。
 
 
-### 05.DataStore原理
 
+#### 4.2 Sp源码分析
+
+
+
+#### 4.3 Sp可能造成ANR
+- commit() / apply()操作可能会造成ANR问题
+    - commit()是同步提交，会在UI主线程中直接执行IO操作，当写入操作耗时比较长时就会导致UI线程被阻塞，进而产生ANR；
+    - apply()虽然是异步提交，但异步写入磁盘时，如果执行了Activity / Service中的onStop()方法，那么一样会同步等待SP写入完毕，等待时间过长时也会引起ANR问题。
+- 首先分析一下SharedPreferences源码中apply方法
+    > SharedPreferencesImpl#apply()，这个方法主要是将记录的数据同步写到Map集合中，然后在开启子线程将数据写入磁盘
+    > SharedPreferencesImpl#enqueueDiskWrite()，这个会将runnable被写入了队列，然后在run方法中写数据到磁盘
+    > QueuedWork#queue()，这个将runnable添加到sWork(LinkedList链表)中，然后通过handler发送处理队列消息MSG_RUN
+- 然后再看一下ActivityThread源码中的handlePauseActivity()、handleStopActivity()方法。
+    > ActivityThread#handlePauseActivity()/handleStopActivity()，Activity在pause和stop的时候会调用该方法
+    > ActivityThread#handlePauseActivity()#QueuedWork.waitToFinish()，这个是等待QueuedWork所有任务处理完的逻辑
+    > QueuedWork#waitToFinish()，这个里面会通过handler查询MSG_RUN消息是否有，如果有则会waiting等待
+- 那么最后得出的结论是
+    - handlePauseActivity()的时候会一直等待 apply() 方法将数据保存成功，否则会一直等待，从而阻塞主线程造成 ANR。
+
+
+
+
+
+### 05.DataStore原理
+#### 5.1 DataStore介绍
+- DataStore包含了两种实现方式：
+    - Preferences DataStore仅使用键存储和访问值数据。此实现不需要预定义的架构，并且不提供类型安全性。
+    - Proto DataStore将数据存储为自定义数据类型的实例。此实现要求您使用协议缓冲区（protobuf - PB协议）定义架构，但它提供类型安全性。
+- DataStore初始化遇到的坑
+    - 不能将DataStore初始化代码写到Activity里面去，否则重复进入Activity并使用Preferences DataStore时，会尝试去创建一个同名的.preferences_pb文件。
+    - 具体看：SingleProcessDataStore#check(!activeFiles.contains(it))，该方法会检查如果判断到activeFiles里已经有该文件，直接抛异常，即不允许重复创建。
+
+
+#### 5.2 DataStore原理分析
+- DataStore初始化源码流程
+    - 由 preferencesDataStore 创建的属性委托来创建 Datastore<Preferences> 实例。
+    - 在项目中只在顶层调用一次 preferencesDataStore 方法，便可在应用的所有其余部分通过此属性访问该实例，这样可以更轻松地将 DataStore 保留为单例。
+- DataStore是如何存储数据，接着看源码流程如下
+    > DataStore<Preferences>.edit()，可以看到edit方法是一个suspend的函数（挂起函数），其主要的实现就是依靠updateData方法的调用
+    > DataStore<T>#updateData()，分析到DataStore是有两种实现，要看的就是Preferences DataStore的实现
+    > PreferenceDataStore#updateData()，可以看到PreferenceDataStore中updateData方法的具体实现其实在delegate中
+    > PreferenceDataStoreFactory#create()，在这个方法中调用了DataStoreFactory.create()
+    > DataStoreFactory#create()，创建的其实是一个SingleProcessDataStore的对象，它同时也是继承于DataStore，它就是所有DataStore背后的真正的实现者。
+- DataStore存储数据的核心逻辑
+    > SingleProcessDataStore#updateData()，这个正是DataStore存储数据的核心逻辑
+        ``` java
+        override suspend fun updateData(transform: suspend (t: T) -> T): T {
+            val ack = CompletableDeferred<T>()
+            val currentDownStreamFlowState = downstreamFlow.value
+            val updateMsg =Message.Update(transform, ack, currentDownStreamFlowState, coroutineContext)
+            actor.offer(updateMsg)
+            return ack.await()
+        }
+        ```
+        - 有一个叫 ack的 CompletableDeferred对象，而CompletableDeferred，是继承于Deferred。这个Deferred对象不正是我们协程中常用的异步调用类嘛！它提供了await操作允许我们等待异步的结果。
+        - 最后封装好的Message被放入actor.offer(updateMsg) 中，actor是消息处理类对象。这个actor是SimpleActor
+        - 看一下SimpleActor可以知道，所有的消息会被放到一个叫messageQueue的Channel对象中，Channel其实就是一个适用于协程信息通信的线程安全的队列。
+    > SimpleActor#offer()，通过consumeMessage消费了我们的消息。再一次回到我们DataStore中的SimpleActor实现对象
+    > SimpleActor#构造函数，如果消息是Read则调用handleRead，如果消息是Update则调用handleUpdate
+    > SingleProcessDataStore#handleUpdate()，这个里面主要是做数据的更新操作逻辑
+    > SingleProcessDataStore#transformAndWrite()，通过了transformAndWrite调用writeData方法，写入数据（FileOutputStream）
+
+
+
+#### 5.3 DataStore优缺点
+- DataStore优势是异步Api
+    - DataStore 的主要优势之一是异步API，所以本身并未提供同步API调用，但实际上可能不一定始终能将周围的代码更改为异步代码。
+- 提出一个问题和思考
+    - 如果使用现有代码库采用同步磁盘 I/O，或者您的依赖项不提供异步API，那么如何将DataStore存储数据改成同步调用？
+- 使用阻塞式协程消除异步差异
+    - 使用 runBlocking() 从 DataStore 同步读取数据。runBlocking()会运行一个新的协程并阻塞当前线程直到内部逻辑完成，所以尽量避免在UI线程调用。
+- 频繁使用阻塞式协程会有问题吗
+    - 要注意的一点是，不用在初始读取时调用runBlocking，会阻塞当前执行的线程，因为初始读取会有较多的IO操作，耗时较长。
+    - 更为推荐的做法则是先异步读取到内存后，后续有需要可直接从内存中拿，而非运行同步代码阻塞式获取。
+- runBlocking是如何消除异步的
+    - 待完善
+
+
+#### 5.4 DataStore数据迁移
+
+
+#### 5.5 DataStore存储对象
+- 再抱一抱DataStore
+    - https://juejin.cn/post/6965672958165516295
 
 
 ### 06.MMKV的存储分析
@@ -42,6 +127,30 @@
 
 
 #### 6.2 MMKV的背景
+- 早期微信的需求
+    - 微信聊天对话内容中的特殊字符所导致的程序崩溃是一类很常见、也很需要快速解决的问题；而哪些字符会导致程序崩溃，是无法预知的。
+    - 只能等用户手机上的微信崩溃之后，再利用类似时光倒流的回溯行为，看看上次软件崩溃的最后一瞬间，用户收到或者发出了什么消息，再用这些消息中的文字去尝试复现发生过的崩溃，最终试出有问题的字符，然后针对性解决。
+- 该需求对应的技术考量
+    - 考量1：把聊天页面的显示文字写到手机磁盘里，才能在程序崩溃、重新启动之后，通过读取文件的方式来查看。但这种方式涉及到io流读写，且消息多会有性能问题。
+    - 考量2：App程序都崩溃了，如何保证要存储的内容，都写入到磁盘中呢？
+    - 考量3：保存聊天内容到磁盘的行为，这个做成同步还是异步呢？如果是异步，如何保证聊天消息的时序性？
+    - 考量4：如何存储数据是同步行为，针对群里聊天这么多消息，如何才能避免卡顿呢？
+    - 考量5：存储数据放到主线程中，用户在群聊天页面猛滑消息，如何爆发性集中式对磁盘写入数据？
+- MMKV诞生的背景
+    - 针对该业务，高频率，同步，大量数据写入磁盘的需求。不管用sp，还是store，还是数据库，只要在主线程同步写入磁盘，会很卡。
+    - 解决方案就是：使用内存映射mmap的底层方法，相当于系统为指定文件开辟专用内存空间，内存数据的改动会自动同步到文件里。
+    - 用浅显的话说：MMKV就是实现用「写入内存」的方式来实现「写入磁盘」的目标。内存的速度多快呀，耗时几乎可以忽略，这样就把写磁盘造成卡顿的问题解决了。
+
+
+
+#### 6.3 MMKV的优势
+
+
+
+
+#### 6.4 MMKV的原理
+
+
 
 
 
